overflow fixed

--- a/index.css
+++ b/index.css
@@ -281,7 +281,7 @@ h1, p {
     }
     .layer {
         margin: 0%;
-        width: 99%;
+        width: 90%;
         height: 90%;
        
     }
